--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>Sky | Onyyyyx</title>
     <meta charset="utf-8">
+    <link rel='stylesheet' type='text/css' href='style.css'>
+    <link rel='icon' href='images/other/moon.png'>
   </head>
   <body>
     <h1>Sky</h1>
