--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Sky | Onyyyyx</title>
     <meta charset="utf-8">
     <link rel='stylesheet' type='text/css' href='style.css'>
-    <link rel='icon' href='images/other/moon.png'>
+    <link rel='icon' href='images/other/icon.png'>
   </head>
   <body>
     <h1>Sky</h1>
