--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel='icon' href='images/other/icon.png'>
   </head>
   <body>
-    <h1>Sky</h1>
-    <blink>Cette page est en cours de développement</blink>
+    <header>
+      <h1>Sky</h1></body>
+    </header>
+    <div class="main">
+      <img src="images/image.JPG">
+    </div>
+
   </body>
 </html>
