--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   </head>
   <body>
     <header>
-      <h1>Sky</h1></body>
+      <h1>Sky</h1>
     </header>
     <div class="main">
-      <img src="images/image.JPG">
+      <img src="images/IMG_1989.JPG">
+      
     </div>
-
+    <script src="script.js"></script>
   </body>
 </html>
