--- a/index.html
+++ b/index.html
@@ -10,57 +10,7 @@
       <h1>Sky</h1>
     </header>
     <div class="main">
-      <img src="images/IMG_1989.JPG">
-      <img src="images/IMG_2007.jpg">
-      <img src="images/IMG_2019.JPG">
-      <img src="images/IMG_2035.JPG">
-      <img src="images/IMG_2053.PNG">
-      <img src="images/IMG_1990.JPG">
-      <img src="images/IMG_2008.jpg">
-      <img src="images/IMG_2020.JPG">
-      <img src="images/IMG_2036.jpg">
-      <img src="images/IMG_2054.PNG">
-      <img src="images/IMG_1991.JPG">
-      <img src="images/IMG_2009.jpg">
-      <img src="images/IMG_2021.JPG">
-      <img src="images/IMG_2037.jpg">
-      <img src="images/IMG_2055.JPG">
-      <img src="images/IMG_1992.jpg">
-      <img src="images/IMG_2010.jpg">
-      <img src="images/IMG_2022.JPG">
-      <img src="images/IMG_2038.jpg">
-      <img src="images/IMG_2056.JPG">
-      <img src="images/IMG_1993.jpg">
-      <img src="images/IMG_2012.JPG">
-      <img src="images/IMG_2023.JPG">
-      <img src="images/IMG_2039.jpg">
-      <img src="images/IMG_2057.JPG">
-      <img src="images/IMG_1994.JPG">
-      <img src="images/IMG_2013.JPG">
-      <img src="images/IMG_2029.JPG">
-      <img src="images/IMG_2040.jpg">
-      <img src="images/IMG_2058.JPG">
-      <img src="images/IMG_1996.JPG">
-      <img src="images/IMG_2014.JPG">
-      <img src="images/IMG_2030.JPG">
-      <img src="images/IMG_2041.jpg">
-      <img src="images/IMG_2060.jpg">
-      <img src="images/IMG_2002.jpg">
-      <img src="images/IMG_2015.JPG">
-      <img src="images/IMG_2031.JPG">
-      <img src="images/IMG_2042.jpg">
-      <img src="images/IMG_2004.jpg">
-      <img src="images/IMG_2016.JPG">
-      <img src="images/IMG_2032.JPG">
-      <img src="images/IMG_2050.JPG">
-      <img src="images/IMG_2005.jpg">
-      <img src="images/IMG_2017.JPG">
-      <img src="images/IMG_2033.JPG">
-      <img src="images/IMG_2051.JPG">
-      <img src="images/IMG_2006.jpg">
-      <img src="images/IMG_2018.jpg">
-      <img src="images/IMG_2034.JPG">
-      <img src="images/IMG_2052.JPG">
+      <img src="images/IMG_1989.JPG"><img src="images/IMG_2007.jpg"><img src="images/IMG_2019.JPG"><img src="images/IMG_2035.JPG"><img src="images/IMG_2053.PNG"><img src="images/IMG_1990.JPG"><img src="images/IMG_2008.jpg"><img src="images/IMG_2020.JPG"><img src="images/IMG_2036.jpg"><img src="images/IMG_2054.PNG"><img src="images/IMG_1991.JPG"><img src="images/IMG_2009.jpg"><img src="images/IMG_2021.JPG"><img src="images/IMG_2037.jpg"><img src="images/IMG_2055.JPG"><img src="images/IMG_1992.jpg"><img src="images/IMG_2010.jpg"><img src="images/IMG_2022.JPG"><img src="images/IMG_2038.jpg"><img src="images/IMG_2056.JPG"><img src="images/IMG_1993.jpg"><img src="images/IMG_2012.JPG"><img src="images/IMG_2023.JPG"><img src="images/IMG_2039.jpg"><img src="images/IMG_2057.JPG"><img src="images/IMG_1994.JPG"><img src="images/IMG_2013.JPG"><img src="images/IMG_2029.JPG"><img src="images/IMG_2040.jpg"><img src="images/IMG_2058.JPG"><img src="images/IMG_1996.JPG"><img src="images/IMG_2014.JPG"><img src="images/IMG_2030.JPG"><img src="images/IMG_2041.jpg"><img src="images/IMG_2060.jpg"><img src="images/IMG_2002.jpg"><img src="images/IMG_2015.JPG"><img src="images/IMG_2031.JPG"><img src="images/IMG_2042.jpg"><img src="images/IMG_2004.jpg"><img src="images/IMG_2016.JPG"><img src="images/IMG_2032.JPG">      <img src="images/IMG_2050.JPG"><img src="images/IMG_2005.jpg"><img src="images/IMG_2017.JPG"><img src="images/IMG_2033.JPG"><img src="images/IMG_2051.JPG"><img src="images/IMG_2006.jpg"><img src="images/IMG_2018.jpg"><img src="images/IMG_2034.JPG"><img src="images/IMG_2052.JPG">
     </div>
     <script src="script.js"></script>
   </body>
