--- a/index.html
+++ b/index.html
@@ -8,22 +8,19 @@
   </head>
   <body>
     <header>
-      <button class="button" data-text="Awesome">
-        <span class="actual-text">&nbsp;sky&nbsp;</span>
-        <span aria-hidden="true" class="hover-text">&nbsp;sky&nbsp;</span>
-      </button>
+      <button class="button" data-text="Awesome"><span class="actual-text">&nbsp;sky&nbsp;</span><span aria-hidden="true" class="hover-text">&nbsp;sky&nbsp;</span></button>
     </header>
     <main>
       <div class="widgets-div">
-      <a class="widget" href="moon.html">
-        <img src="images/Moon/IMG_2055.JPG">
-        <p>Moon</p>
-      </a>
-      <a class="widget" href="stars.html">
-        <img src="images/Stars/IMG_2012.JPG">
-        <p>Stars</p>
-      </a>
-    </div>
+        <a class="widget" href="moon.html">
+          <img src="images/Moon/IMG_2055.JPG">
+          <p>Moon</p>
+        </a>
+        <a class="widget" href="stars.html">
+          <img src="images/Stars/IMG_2012.JPG">
+          <p>Stars</p>
+        </a>
+      </div>
     </main>
     <footer>
       Fully developped by <a href="https://github.com/onyyyyx">Onyx</a>
