--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Sky | Onyyyyx</title>
-    <meta charset="utf-8">
-    <link rel='stylesheet' type='text/css' href='style.css'>
-    <link rel='icon' href='images/other/icon.png'>
-  </head>
-  <body>
-    <header>
-      <button class="button" data-text="Awesome"><span class="actual-text">&nbsp;sky&nbsp;</span><span aria-hidden="true" class="hover-text">&nbsp;sky&nbsp;</span></button>
-    </header>
-    <main>
-      <div class="widgets-div">
-        <a class="widget" href="moon.html">
-          <img src="images/Moon/IMG_2055.JPG">
-          <p>Moon</p>
-        </a>
-        <a class="widget" href="stars.html">
-          <img src="images/Stars/IMG_2012.JPG">
-          <p>Stars</p>
-        </a>
-      </div>
-    </main>
-    <footer>
-      Fully developped by <a href="https://github.com/onyyyyx">Onyx</a>
-    </footer>
-  </body>
+
+<head>
+  <title>Sky | Onyyyyx</title>
+  <meta charset="utf-8">
+  <link rel='stylesheet' type='text/css' href='style.css'>
+  <link rel='icon' href='images/other/icon.png'>
+</head>
+
+<body>
+  <header>
+    <button class="button" data-text="Awesome"><span class="actual-text">&nbsp;sky&nbsp;</span><span aria-hidden="true"
+        class="hover-text">&nbsp;sky&nbsp;</span></button>
+  </header>
+  <main>
+    <div class="widgets-div">
+      <a class="widget" href="moon.html">
+        <img src="images/Moon/IMG_2055.JPG">
+        <p>Moon</p>
+      </a>
+      <a class="widget" href="stars.html">
+        <img src="images/Stars/IMG_2012.JPG">
+        <p>Stars</p>
+      </a>
+    </div>
+  </main>
+  <footer>
+    <a class="btn btn-primary" href="#"><img src="images/other/top.png"></a>
+    <p>Developpement: <a href="https://github.com/onyyyyx">Onyx</a></p>
+    <p>Pictures: <a href="https://github.com/onyyyyx">Onyx</a></p>
+  </footer>
+</body>
+
 </html>
