--- a/stars.html
+++ b/stars.html
@@ -12,6 +12,8 @@
 	<header>
 		<button class="button" data-text="Awesome"><span class="actual-text">&nbsp;sky&nbsp;</span><span aria-hidden="true"
 				class="hover-text">&nbsp;sky&nbsp;</span></button>
+		<div class="home"><a href="index.html" class="animated-link">Home</a></div>
+
 	</header>
 	<main>
 		<div class="gallery">
@@ -19,7 +21,8 @@
 				src="images/Stars/IMG_2014.JPG" alt="Sirius">
 		</div>
 	</main>
-	<footer> <a class="btn btn-primary" href="#"><img src="images/other/top.png"></a>
+	<footer>
+		<a class="btn btn-primary" href="#"><img src="images/other/top.png"></a>
 		<p>Developpement: <a href="https://github.com/onyyyyx">Onyx</a></p>
 		<p>Pictures: <a href="https://github.com/onyyyyx">Onyx</a></p>
 	</footer>
