--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta charset="utf-8">
   <link rel='stylesheet' type='text/css' href='style.css'>
   <link rel='icon' href='images/other/icon.png'>
+  <meta property="og:title" content="Sky">
+  <meta property="og:description" content="Night sky pictures">
+  <meta property="og:image" content="images/Moon/IMG_2023.JPG">
+  <meta property="og:url" content="https://onyyyyx.github.io/sky">
+  <meta property="og:type" content="website">
 </head>
 
 <body>
