--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <link rel='stylesheet' type='text/css' href='style.css'>
   <link rel='icon' href='images/other/icon.png'>
+  <script src="script.js"></script>
   <meta property="og:title" content="Sky">
   <meta property="og:description" content="Night sky pictures">
   <meta property="og:image" content="images/Moon/IMG_2023.JPG">
@@ -17,6 +18,14 @@
   <header>
     <button class="button" data-text="Awesome"><span class="actual-text">&nbsp;sky&nbsp;</span><span aria-hidden="true"
         class="hover-text">&nbsp;sky&nbsp;</span></button>
+    <div class="topnav" id="myTopnav">
+      <a href="index.html"  class="active">Home</a>
+      <a href="moon.html">Moon</a>
+      <a href="stars.html">Stars</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
   </header>
   <main>
     <div class="widgets-div">
