--- a/stars.html
+++ b/stars.html
@@ -6,14 +6,22 @@
 	<meta charset="utf-8">
 	<link rel='stylesheet' type='text/css' href='style.css'>
 	<link rel='icon' href='images/other/icon.png'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="script.js"></script>
 </head>
 
 <body>
 	<header>
-		<button class="button" data-text="Awesome"><span class="actual-text">&nbsp;sky&nbsp;</span><span aria-hidden="true"
-				class="hover-text">&nbsp;sky&nbsp;</span></button>
-		<div class="home"><a href="index.html" class="animated-link">Home</a></div>
-
+		<button class="button" data-text="Awesome"><span class="actual-text">&nbsp;sky&nbsp;</span><span
+				aria-hidden="true" class="hover-text">&nbsp;sky&nbsp;</span></button>
+		<div class="topnav" id="myTopnav">
+			<a href="index.html">Home</a>
+			<a href="moon.html">Moon</a>
+			<a href="stars.html" class="active">Stars</a>
+			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+				<i class="fa fa-bars"></i>
+			</a>
+		</div>
 	</header>
 	<main>
 		<div class="gallery">
