--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="script.js"></script>
   <meta property="og:title" content="Sky">
   <meta property="og:description" content="Night sky pictures">
-  <meta property="og:image" content="images/Moon/IMG_2023.JPG">
+  <meta property="og:image" content="images/moon/IMG_2023.JPG">
   <meta property="og:url" content="https://onyyyyx.github.io/sky">
   <meta property="og:type" content="website">
 </head>
@@ -20,8 +20,10 @@
         class="hover-text">&nbsp;sky&nbsp;</span></button>
     <div class="topnav" id="myTopnav">
       <a href="index.html"  class="active">Home</a>
-      <a href="moon.html">Moon</a>
-      <a href="stars.html">Stars</a>
+      <a href="moon.php">Moon</a>
+      <a href="stars.php">Stars</a>
+      <a href="deepsky.php">Deep Sky</a>
+      <a href="openfield.php">Open Field</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
@@ -29,13 +31,21 @@
   </header>
   <main>
     <div class="widgets-div">
-      <a class="widget" href="moon.html">
-        <img src="images/Moon/IMG_2055.JPG">
+      <a class="widget" href="moon.php">
+        <img src="images/moon/IMG_2055.JPG">
         <p>Moon</p>
       </a>
-      <a class="widget" href="stars.html">
-        <img src="images/Stars/IMG_2012.JPG">
+      <a class="widget" href="stars.php">
+        <img src="images/stars/IMG_2012.JPG">
         <p>Stars</p>
+      </a>
+      <a href="deepsky.php" class="widget">
+        <img src="">
+        <p>Deep Sky</p>
+      </a>
+      <a href="openfield.php" class="widget">
+        <img src="">
+        <p>Open Field</p>
       </a>
     </div>
   </main>
