--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     <button class="button" data-text="Awesome"><span class="actual-text">&nbsp;sky&nbsp;</span><span aria-hidden="true"
         class="hover-text">&nbsp;sky&nbsp;</span></button>
     <div class="topnav" id="myTopnav">
-      <a href="index.html"  class="active">Home</a>
-      <a href="moon.php">Moon</a>
-      <a href="stars.php">Stars</a>
-      <a href="deepsky.php">Deep Sky</a>
-      <a href="openfield.php">Open Field</a>
+      <a href="index.html" class="active">Home</a>
+      <a href="moon.html">Moon</a>
+      <a href="stars.html">Stars</a>
+      <a href="deepsky.html">Deep Sky</a>
+      <a href="openfield.html">Open Field</a>
+			<a href="planets.html">Planets</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
@@ -31,21 +32,25 @@
   </header>
   <main>
     <div class="widgets-div">
-      <a class="widget" href="moon.php">
-        <img src="images/moon/IMG_2055.JPG">
+      <a class="widget" href="moon.html">
+        <img src="images/moon/image_005.jpg">
         <p>Moon</p>
       </a>
-      <a class="widget" href="stars.php">
-        <img src="images/stars/IMG_2012.JPG">
+      <a class="widget" href="stars.html">
+        <img src="images/stars/Altair.png">
         <p>Stars</p>
       </a>
-      <a href="deepsky.php" class="widget">
-        <img src="">
+      <a href="deepsky.html" class="widget">
+        <img src="images/deepsky/Ring_Nebulae(01).png">
         <p>Deep Sky</p>
       </a>
-      <a href="openfield.php" class="widget">
-        <img src="">
+      <a href="openfield.html" class="widget">
+        <img src="images/openfield/processed.png">
         <p>Open Field</p>
+      </a>
+      <a href="planets.html" class="widget">
+        <img src="images/planets/Saturn(01).png">
+        <p>Planets</p>
       </a>
     </div>
   </main>
