--- a/planets.html
+++ b/planets.html
@@ -16,10 +16,11 @@
 				aria-hidden="true" class="hover-text">&nbsp;sky&nbsp;</span></button>
 		<div class="topnav" id="myTopnav">
 			<a href="index.html">Home</a>
-			<a href="moon.php">Moon</a>
-			<a href="deepsky.php">Deep Sky</a>
-			<a href="openfield.php">Open Field</a>
-			<a href="stars.php" class="active">Stars</a>
+			<a href="moon.html">Moon</a>
+            <a href="stars.html">Stars</a>
+			<a href="deepsky.html">Deep Sky</a>
+			<a href="openfield.html">Open Field</a>
+			<a href="planets.html" class="active">Planets</a>
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 				<i class="fa fa-bars"></i>
 			</a>
@@ -27,14 +28,7 @@
 	</header>
 	<main>
 		<div class="gallery">
-		<?php
-          $files = scandir('images/stars');
-          foreach ($files as $f) {
-			if ($f === '.') { continue; }
-      	    elseif ($f === '..') { continue; }
-            echo('<img src="images/stars/' . $f . '">');
-          };
-        ?>
+		
 		</div>
 	</main>
 	<footer>
