--- a/deepsky.html
+++ b/deepsky.html
@@ -25,7 +25,7 @@
 </div>
 </header>
 <main>
-<div class="gallery"><img alt="ring.png" src="images/deepsky/ring.png"/><img alt="andromede.png" src="images/deepsky/andromede.png"/><img alt="ring2.png" src="images/deepsky/ring2.png"/><img alt="processed.png" src="images/deepsky/processed.png"/><img alt="m110.png" src="images/deepsky/m110.png"/></div>
+<div class="gallery"><img alt="Ring_Nebulae(02).png" src="images/deepsky/Ring_Nebulae(02).png"/><img alt="Ring_Nebulae(01).png" src="images/deepsky/Ring_Nebulae(01).png"/><img alt="M110.png" src="images/deepsky/M110.png"/><img alt="Andromede.png" src="images/deepsky/Andromede.png"/><img alt="M13.png" src="images/deepsky/M13.png"/></div>
 </main>
 <footer>
 <a class="btn btn-primary" href="#"><img src="images/other/top.png"/></a>
