--- a/planets.html
+++ b/planets.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
+
 <html>
-
 <head>
-	<title>Sky | Onyyyyx</title>
-	<meta charset="utf-8">
-	<link rel='stylesheet' type='text/css' href='style.css'>
-	<link rel='icon' href='images/other/icon.png'>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="script.js"></script>
+<title>Sky | Onyyyyx</title>
+<meta charset="utf-8"/>
+<link href="style.css" rel="stylesheet" type="text/css"/>
+<link href="images/other/icon.png" rel="icon"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+<script src="script.js"></script>
 </head>
-
 <body>
-	<header>
-		<button class="button" data-text="Awesome"><span class="actual-text">&nbsp;sky&nbsp;</span><span
-				aria-hidden="true" class="hover-text">&nbsp;sky&nbsp;</span></button>
-		<div class="topnav" id="myTopnav">
-			<a href="index.html">Home</a>
-			<a href="moon.html">Moon</a>
-            <a href="stars.html">Stars</a>
-			<a href="deepsky.html">Deep Sky</a>
-			<a href="openfield.html">Open Field</a>
-			<a href="planets.html" class="active">Planets</a>
-			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-				<i class="fa fa-bars"></i>
-			</a>
-		</div>
-	</header>
-	<main>
-		<div class="gallery">
-		
-		</div>
-	</main>
-	<footer>
-		<a class="btn btn-primary" href="#"><img src="images/other/top.png"></a>
-		<p>Developpement: <a href="https://github.com/onyyyyx">Onyx</a></p>
-		<p>Pictures: <a href="https://github.com/onyyyyx">Onyx</a></p>
-	</footer>
+<header>
+<button class="button" data-text="Awesome"><span class="actual-text"> sky </span><span aria-hidden="true" class="hover-text"> sky </span></button>
+<div class="topnav" id="myTopnav">
+<a href="index.html">Home</a>
+<a href="moon.html">Moon</a>
+<a href="stars.html">Stars</a>
+<a href="deepsky.html">Deep Sky</a>
+<a href="openfield.html">Open Field</a>
+<a class="active" href="planets.html">Planets</a>
+<a class="icon" href="javascript:void(0);" onclick="myFunction()">
+<i class="fa fa-bars"></i>
+</a>
+</div>
+</header>
+<main>
+<div class="gallery"><img alt="Saturn(02).png" src="images/planets/Saturn(02).png"/><img alt="Saturn(01).png" src="images/planets/Saturn(01).png"/></div>
+</main>
+<footer>
+<a class="btn btn-primary" href="#"><img src="images/other/top.png"/></a>
+<p>Developpement: <a href="https://github.com/onyyyyx">Onyx</a></p>
+<p>Pictures: <a href="https://github.com/onyyyyx">Onyx</a></p>
+</footer>
 </body>
-
 </html>
