Add IMAGE_153.png and image tag

--- a/openfield.html
+++ b/openfield.html
@@ -25,7 +25,7 @@
 </div>
 </header>
 <main>
-<div class="gallery"><img alt="processed.png" src="images/openfield/processed.png"/><img alt="processed2.png" src="images/openfield/processed2.png"/></div>
+<div class="gallery"><img alt="IMAGE_153.png" src="images/openfield/IMAGE_153.png"/><img alt="processed.png" src="images/openfield/processed.png"/><img alt="processed2.png" src="images/openfield/processed2.png"/></div>
 </main>
 <footer>
 <a class="btn btn-primary" href="#"><img src="images/other/top.png"/></a>
