--- a/deepsky.html
+++ b/deepsky.html
@@ -25,7 +25,7 @@
 </div>
 </header>
 <main>
-<div class="gallery"><img alt="Ring_Nebulae(02).png" src="images/deepsky/Ring_Nebulae(02).png"/><img alt="Ring_Nebulae(01).png" src="images/deepsky/Ring_Nebulae(01).png"/><img alt="M110.png" src="images/deepsky/M110.png"/><img alt="Andromede.png" src="images/deepsky/Andromede.png"/><img alt="M13.png" src="images/deepsky/M13.png"/></div>
+<div class="gallery"><img alt="IMG_3453.PNG" src="images/deepsky/IMG_3453.PNG"/><img alt="Ring_Nebulae(01).png" src="images/deepsky/Ring_Nebulae(01).png"/><img alt="Ring_Nebulae(02).png" src="images/deepsky/Ring_Nebulae(02).png"/><img alt="IMG_3451.jpg" src="images/deepsky/IMG_3451.jpg"/><img alt="M110.png" src="images/deepsky/M110.png"/><img alt="IMG_3448.jpg" src="images/deepsky/IMG_3448.jpg"/><img alt="IMG_2925.PNG" src="images/deepsky/IMG_2925.PNG"/><img alt="Tsuchinshan-ATLAS.jpg" src="images/deepsky/Tsuchinshan-ATLAS.jpg"/><img alt="IMG_3452.jpg" src="images/deepsky/IMG_3452.jpg"/><img alt="M13.png" src="images/deepsky/M13.png"/><img alt="Andromede.png" src="images/deepsky/Andromede.png"/><img alt="IMG_3447.jpg" src="images/deepsky/IMG_3447.jpg"/></div>
 </main>
 <footer>
 <a class="btn btn-primary" href="#"><img src="images/other/top.png"/></a>
