--- a/planets.html
+++ b/planets.html
@@ -25,7 +25,7 @@
 </div>
 </header>
 <main>
-<div class="gallery"><img alt="Saturn(02).png" src="images/planets/Saturn(02).png"/><img alt="Saturn(01).png" src="images/planets/Saturn(01).png"/></div>
+<div class="gallery"><img alt="Saturn(01).png" src="images/planets/Saturn(01).png"/><img alt="Saturn(02).png" src="images/planets/Saturn(02).png"/><img alt="Jupiter.jpg" src="images/planets/Jupiter.jpg"/></div>
 </main>
 <footer>
 <a class="btn btn-primary" href="#"><img src="images/other/top.png"/></a>
