--- a/stars.html
+++ b/stars.html
@@ -25,7 +25,7 @@
 </div>
 </header>
 <main>
-<div class="gallery"><img alt="Altair.png" src="images/stars/Altair.png"/><img alt="Alcor_and_Mizar.png" src="images/stars/Alcor_and_Mizar.png"/><img alt="Sirius(02).jpg" src="images/stars/Sirius(02).jpg"/><img alt="Sirius(03).jpg" src="images/stars/Sirius(03).jpg"/><img alt="Sirius(01).jpg" src="images/stars/Sirius(01).jpg"/></div>
+<div class="gallery"><img alt="Alcor_and_Mizar.png" src="images/stars/Alcor_and_Mizar.png"/><img alt="IMG_3058.PNG" src="images/stars/IMG_3058.PNG"/><img alt="Altair.png" src="images/stars/Altair.png"/><img alt="IMG_3409.jpg" src="images/stars/IMG_3409.jpg"/><img alt="Sirius(03).jpg" src="images/stars/Sirius(03).jpg"/><img alt="Sirius(02).jpg" src="images/stars/Sirius(02).jpg"/><img alt="Sirius(01).jpg" src="images/stars/Sirius(01).jpg"/></div>
 </main>
 <footer>
 <a class="btn btn-primary" href="#"><img src="images/other/top.png"/></a>
