--- a/index.html
+++ b/index.html
@@ -1,63 +1,63 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Sky | Onyyyyx</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" href="images/other/icon.png" />
+    <script src="script.js"></script>
+    <meta property="og:title" content="Sky" />
+    <meta property="og:description" content="Night sky pictures" />
+    <meta property="og:image" content="images/moon/IMG_2023.JPG" />
+    <meta property="og:url" content="https://onyyyyx.github.io/sky" />
+    <meta property="og:type" content="website" />
+  </head>
 
-<head>
-  <title>Sky | Onyyyyx</title>
-  <meta charset="utf-8">
-  <link rel='stylesheet' type='text/css' href='style.css'>
-  <link rel='icon' href='images/other/icon.png'>
-  <script src="script.js"></script>
-  <meta property="og:title" content="Sky">
-  <meta property="og:description" content="Night sky pictures">
-  <meta property="og:image" content="images/moon/IMG_2023.JPG">
-  <meta property="og:url" content="https://onyyyyx.github.io/sky">
-  <meta property="og:type" content="website">
-</head>
-
-<body>
-  <header>
-    <button class="button" data-text="Awesome"><span class="actual-text">&nbsp;sky&nbsp;</span><span aria-hidden="true"
-        class="hover-text">&nbsp;sky&nbsp;</span></button>
-    <div class="topnav" id="myTopnav">
-      <a href="index.html" class="active">Home</a>
-      <a href="moon.html">Moon</a>
-      <a href="stars.html">Stars</a>
-      <a href="deepsky.html">Deep Sky</a>
-      <a href="openfield.html">Open Field</a>
-			<a href="planets.html">Planets</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
-  </header>
-  <main>
-    <div class="widgets-div">
-      <a class="widget" href="moon.html">
-        <img src="images/moon/image_005.jpg">
-        <p>Moon</p>
-      </a>
-      <a class="widget" href="stars.html">
-        <img src="images/stars/Altair.png">
-        <p>Stars</p>
-      </a>
-      <a href="deepsky.html" class="widget">
-        <img src="images/deepsky/Ring_Nebulae(01).png">
-        <p>Deep Sky</p>
-      </a>
-      <a href="openfield.html" class="widget">
-        <img src="images/openfield/processed.png">
-        <p>Open Field</p>
-      </a>
-      <a href="planets.html" class="widget">
-        <img src="images/planets/Saturn(01).png">
-        <p>Planets</p>
-      </a>
-    </div>
-  </main>
-  <footer>
-    <p>Developpement: <a href="https://github.com/onyyyyx">Onyx</a></p>
-    <p>Pictures: <a href="https://github.com/onyyyyx">Onyx</a></p>
-  </footer>
-</body>
-
+  <body>
+    <header>
+      <button class="button" data-text="Awesome">
+        <span class="actual-text">&nbsp;sky&nbsp;</span
+        ><span aria-hidden="true" class="hover-text">&nbsp;sky&nbsp;</span>
+      </button>
+      <div class="topnav" id="myTopnav">
+        <a href="index.html" class="active">Home</a>
+        <a href="moon.html">Moon</a>
+        <a href="stars.html">Stars</a>
+        <a href="deepsky.html">Deep Sky</a>
+        <a href="openfield.html">Open Field</a>
+        <a href="planets.html">Planets</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+    </header>
+    <main>
+      <div class="widgets-div">
+        <a class="widget" href="moon.html">
+          <img src="images/moon/image_005.jpg" />
+          <p>Moon</p>
+        </a>
+        <a class="widget" href="stars.html">
+          <img src="images/stars/Altair.png" />
+          <p>Stars</p>
+        </a>
+        <a href="deepsky.html" class="widget">
+          <img src="images/deepsky/Ring_Nebulae(01).png" />
+          <p>Deep Sky</p>
+        </a>
+        <a href="openfield.html" class="widget">
+          <img src="images/openfield/processed.png" />
+          <p>Open Field</p>
+        </a>
+        <a href="planets.html" class="widget">
+          <img src="images/planets/Saturn(01).png" />
+          <p>Planets</p>
+        </a>
+      </div>
+    </main>
+    <footer>
+      <p>Developpement: <a href="https://github.com/onyyyyx">Onyx</a></p>
+      <p>Pictures: <a href="https://github.com/onyyyyx">Onyx</a></p>
+    </footer>
+  </body>
 </html>
