--- a/stars.html
+++ b/stars.html
@@ -1,36 +1,56 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-<title>Sky | Onyyyyx</title>
-<meta charset="utf-8"/>
-<link href="style.css" rel="stylesheet" type="text/css"/>
-<link href="images/other/icon.png" rel="icon"/>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-<script src="script.js"></script>
-</head>
-<body>
-<header>
-<button class="button" data-text="Awesome"><span class="actual-text"> sky </span><span aria-hidden="true" class="hover-text"> sky </span></button>
-<div class="topnav" id="myTopnav">
-<a href="index.html">Home</a>
-<a href="moon.html">Moon</a>
-<a class="active" href="stars.html">Stars</a>
-<a href="deepsky.html">Deep Sky</a>
-<a href="openfield.html">Open Field</a>
-<a href="planets.html">Planets</a>
-<a class="icon" href="javascript:void(0);" onclick="myFunction()">
-<i class="fa fa-bars"></i>
-</a>
-</div>
-</header>
-<main>
-<div class="gallery"><img alt="Alcor_and_Mizar.png" src="images/stars/Alcor_and_Mizar.png"/><img alt="IMG_3058.PNG" src="images/stars/IMG_3058.PNG"/><img alt="Altair.png" src="images/stars/Altair.png"/><img alt="IMG_3409.jpg" src="images/stars/IMG_3409.jpg"/><img alt="Sirius(03).jpg" src="images/stars/Sirius(03).jpg"/><img alt="Sirius(02).jpg" src="images/stars/Sirius(02).jpg"/><img alt="Sirius(01).jpg" src="images/stars/Sirius(01).jpg"/></div>
-</main>
-<footer>
-<a class="btn btn-primary" href="#"><img src="images/other/top.png"/></a>
-<p>Developpement: <a href="https://github.com/onyyyyx">Onyx</a></p>
-<p>Pictures: <a href="https://github.com/onyyyyx">Onyx</a></p>
-</footer>
-</body>
+  <head>
+    <title>Sky | Onyyyyx</title>
+    <meta charset="utf-8" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="images/other/icon.png" rel="icon" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <header>
+      <button class="button" data-text="Awesome">
+        <span class="actual-text"> sky </span
+        ><span aria-hidden="true" class="hover-text"> sky </span>
+      </button>
+      <div class="topnav" id="myTopnav">
+        <a href="index.html">Home</a>
+        <a href="moon.html">Moon</a>
+        <a class="active" href="stars.html">Stars</a>
+        <a href="deepsky.html">Deep Sky</a>
+        <a href="openfield.html">Open Field</a>
+        <a href="planets.html">Planets</a>
+        <a class="icon" href="javascript:void(0);" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+    </header>
+    <main>
+      <div class="gallery">
+        <img
+          alt="Alcor_and_Mizar.png"
+          src="images/stars/Alcor_and_Mizar.png"
+        /><img alt="IMG_3058.PNG" src="images/stars/IMG_3058.PNG" /><img
+          alt="Altair.png"
+          src="images/stars/Altair.png"
+        /><img alt="IMG_3409.jpg" src="images/stars/IMG_3409.jpg" /><img
+          alt="Sirius(03).jpg"
+          src="images/stars/Sirius(03).jpg"
+        /><img alt="Sirius(02).jpg" src="images/stars/Sirius(02).jpg" /><img
+          alt="Sirius(01).jpg"
+          src="images/stars/Sirius(01).jpg"
+        />
+      </div>
+    </main>
+    <footer>
+      <a class="btn btn-primary" href="#"><img src="images/other/top.png" /></a>
+      <p>Developpement: <a href="https://github.com/onyyyyx">Onyx</a></p>
+      <p>Pictures: <a href="https://github.com/onyyyyx">Onyx</a></p>
+    </footer>
+  </body>
 </html>
