--- a/openfield.html
+++ b/openfield.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-<title>Sky | Onyyyyx</title>
-<meta charset="utf-8"/>
-<link href="style.css" rel="stylesheet" type="text/css"/>
-<link href="images/other/icon.png" rel="icon"/>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-<script src="script.js"></script>
-</head>
-<body>
-<header>
-<button class="button" data-text="Awesome"><span class="actual-text"> sky </span><span aria-hidden="true" class="hover-text"> sky </span></button>
-<div class="topnav" id="myTopnav">
-<a href="index.html">Home</a>
-<a href="moon.html">Moon</a>
-<a href="stars.html">Stars</a>
-<a href="deepsky.html">Deep Sky</a>
-<a class="active" href="openfield.html">Open Field</a>
-<a href="planets.html">Planets</a>
-<a class="icon" href="javascript:void(0);" onclick="myFunction()">
-<i class="fa fa-bars"></i>
-</a>
-</div>
-</header>
-<main>
-<div class="gallery"><img alt="IMAGE_153.png" src="images/openfield/IMAGE_153.png"/><img alt="processed.png" src="images/openfield/processed.png"/><img alt="962351E9-46EC-453A-9E8F-AF80298616E6.JPG" src="images/openfield/962351E9-46EC-453A-9E8F-AF80298616E6.JPG"/><img alt="processed2.png" src="images/openfield/processed2.png"/></div>
-</main>
-<footer>
-<a class="btn btn-primary" href="#"><img src="images/other/top.png"/></a>
-<p>Developpement: <a href="https://github.com/onyyyyx">Onyx</a></p>
-<p>Pictures: <a href="https://github.com/onyyyyx">Onyx</a></p>
-</footer>
-</body>
+  <head>
+    <title>Sky | Onyyyyx</title>
+    <meta charset="utf-8" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="images/other/icon.png" rel="icon" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <header>
+      <button class="button" data-text="Awesome">
+        <span class="actual-text"> sky </span
+        ><span aria-hidden="true" class="hover-text"> sky </span>
+      </button>
+      <div class="topnav" id="myTopnav">
+        <a href="index.html">Home</a>
+        <a href="moon.html">Moon</a>
+        <a href="stars.html">Stars</a>
+        <a href="deepsky.html">Deep Sky</a>
+        <a class="active" href="openfield.html">Open Field</a>
+        <a href="planets.html">Planets</a>
+        <a class="icon" href="javascript:void(0);" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+    </header>
+    <main>
+      <div class="gallery">
+        <img alt="IMAGE_153.png" src="images/openfield/IMAGE_153.png" /><img
+          alt="processed.png"
+          src="images/openfield/processed.png"
+        /><img
+          alt="962351E9-46EC-453A-9E8F-AF80298616E6.JPG"
+          src="images/openfield/962351E9-46EC-453A-9E8F-AF80298616E6.JPG"
+        /><img alt="processed2.png" src="images/openfield/processed2.png" />
+      </div>
+    </main>
+    <footer>
+      <a class="btn btn-primary" href="#"><img src="images/other/top.png" /></a>
+      <p>Developpement: <a href="https://github.com/onyyyyx">Onyx</a></p>
+      <p>Pictures: <a href="https://github.com/onyyyyx">Onyx</a></p>
+    </footer>
+  </body>
 </html>
