--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TodoMatic</title>
+    <title>Sky | Onyyyyx</title>
+    <meta property="og:title" content="Sky" />
+    <meta property="og:description" content="Night sky pictures" />
+    <meta property="og:image" content="images/moon/IMG_2023.JPG" />
+    <meta property="og:url" content="https://onyyyyx.github.io/sky" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
+    <header>
+      <button class="button" data-text="Awesome">
+        <span class="actual-text">&nbsp;sky&nbsp;</span
+        ><span aria-hidden="true" class="hover-text">&nbsp;sky&nbsp;</span>
+      </button>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
