Rename images, that was causing err404

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Sky | Onyyyyx</title>
     <meta property="og:title" content="Sky" />
     <meta property="og:description" content="Night sky pictures" />
-    <meta property="og:image" content="images/moon/IMG_2023.JPG" />
-    <meta property="og:url" content="https://onyyyyx.github.io/sky" />
+    <!-- <meta property="og:image" content="images/moon/IMG_2023.JPG" /> -->
+    <meta property="og:url" content="https://sky-onyx.vercel.app" />
     <meta property="og:type" content="website" />
   </head>
   <body>
