--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <!-- <meta property="og:image" content="images/moon/IMG_2023.JPG" /> -->
     <meta property="og:url" content="https://sky-onyx.vercel.app" />
     <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
